smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/trait-targets/traits-on-apply.smithy
// Parse error at line 5, column 6 near ` Foo`: Unexpected shape type: apply
namespace com.foo

@deprecated
apply Foo @deprecated
